--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <main>
             <section>
                 <p>A hair salon for men in Kyiv</p>
-                <h1 lang="eng">BarberShop</h1>
+                <h1>BarberShop</h1>
                 <p>Мы эксперты в модных мужских стрижках.
                             Работаем быстро, осторожно и со вкусом.</p>
                 <ul>
