--- a/index.html
+++ b/index.html
@@ -5,40 +5,46 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Barbershop</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap"
+            rel="stylesheet">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+        <link rel="stylesheet" href="./style/style.css">
     </head>
     <body>
-        <header>
-            <nav>
+        <header class="section section-header">
+            <nav class="nav-site">
                 <a href="./"><img src="./img/logo.svg" width="69" height="56" alt="Логотип Барбершоп"></a>
-                <ul>
-                    <li><a href="">О нас</a></li>
-                    <li><a href="">Услуги и цены</a></li>
-                    <li><a href="">Мастера</a></li>
-                    <li><a href="">Контакты</a></li>
+                <ul class="list">
+                    <li class="list-item"><a class="link" href="">О нас</a></li>
+                    <li class="list-item"><a class="link" href="">Услуги и цены</a></li>
+                    <li class="list-item"><a class="link" href="">Мастера</a></li>
+                    <li class="list-item"><a class="link" href="">Контакты</a></li>
                 </ul>
             </nav>
-            <a href="tel:+380441111111">+38 044 111 11 11</a>
-            <a href="">онлайн-запись</a>
+            <a class="link" href="tel:+380441111111">+38 044 111 11 11</a>
+            <a class="link" href="">онлайн-запись</a>
         </header>
         <main>
-            <section>
-                <p>A hair salon for men in Kyiv</p>
-                <h1>BarberShop</h1>
-                <p>Мы эксперты в модных мужских стрижках.
+            <section class="hero">
+                <p class="hero-text">A hair salon for men in Kyiv</p>
+                <h1 class="hero-title">BarberShop</h1>
+                <p class="hero-item">Мы эксперты в модных мужских стрижках.
                             Работаем быстро, осторожно и со вкусом.</p>
-                <ul>
-                    <li><a href="" target="_blank" rel="noopener noreferer">Instagram</a></li>
-                    <li><a href="" target="_blank" rel="noopener noreferer">Youtube</a></li>
+                <ul class="aside">
+                    <li><a class="link aside-link" href="" target="_blank" rel="noopener noreferer">Instagram</a></li>
+                    <li><a class="link aside-link" href="" target="_blank" rel="noopener noreferer">Youtube</a></li>
                 </ul>
             </section>
-            <section>
+            <section class="section section-about">
                 <ul>
                     <li><img src="./img/about/img-1.jpg" alt="Работа Барбера"></li>
                     <li><img src="./img/about/img-2.jpg" alt="Стильная стрижка 2022"></li>
                 </ul>
                 <div>
-                    <p>О нас</p>
-                    <h2>Лучший Барбершоп твоего города</h2>
+                    <p class="label">О нас</p>
+                    <h2 class="section-title">Лучший Барбершоп твоего города</h2>
                     <p>Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
                     <p>Мы команда, которая никогда не останавливается на достигнутом
                                 и жаждет перемен. И когда ты попадешь в руки нашего мастера,
@@ -48,16 +54,16 @@
                     <button type="button">Онлайн-запись</button>
                 </div>
             </section>
-            <section>
-                <p>Проведи время в компаниилучших мастеров</p>
-                <h2>Услуги и цены</h2>
-                <ul>
+            <section class="section section-price">
+                <p class="label">Проведи время в компаниилучших мастеров</p>
+                <h2 class="title">Услуги и цены</h2>
+                <ul class="list">
                     <li><span>Мужская стрижка</span><span>от 300 грн.</span></li>
                     <li><span>Стрижка бороды</span><span>от 200 грн.</span></li>
                     <li><span>Стрижка усов</span><span>от 200 грн.</span></li>
                     <li><span>Бритье опасной бритвой</span><span>от 200 грн.</span></li>
                 </ul>
-                <ul>
+                <ul class="list">
                     <li><span>Cтрижка у стажера</span><span>от 50 грн.</span></li>
                     <li><span>Стрижка под насадку</span><span>от 200 грн.</span></li>
                     <li><span>Детская стрижка (до 12 лет)</span><span>от 300 грн.</span></li>
@@ -65,39 +71,39 @@
                 </ul>
                 <a href="">Онлайн-Запись</a>
             </section>
-            <section>
-                <ul>
-                    <li>
-                        <span>600<sup>+</sup></span>
+            <section class="section section-features">
+                <ul class="features-counter">
+                    <li class="counter-item">
+                        <span class="counter">600<sup class="sup">+</sup></span>
                         <p>Довольных клиентов в день</p>
                     </li>
-                    <li>
-                        <span>50<sup>+</sup></span>
+                    <li class="counter-item">
+                        <span class="counter">50<sup class="sup">+</sup></span>
                         <p>Наград за отличный сервис</p>
                     </li>
-                    <li>
-                        <span>20<sup>+</sup></span>
+                    <li class="counter-item">
+                        <span class="counter">20<sup class="sup">+</sup></span>
                         <p>Лучших мастеров Киева</p>
                     </li>
                     
-                    <li>
-                        <span>100<sup>+</sup></span>
+                    <li class="counter-item">
+                        <span class="counter">100<sup class="sup">+</sup></span>
                         <p>Подарков постоянным клиентам</p>
                     </li>
                 </ul>
                 <div>
-                    <p>старая традиционная школа</p>
-                    <h2>Почему приходят именно к нам?</h2>
+                    <p class="label">старая традиционная школа</p>
+                    <h2 class="section-title">Почему приходят именно к нам?</h2>
                     <p>О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.</p>
                 </div>
             </section>
-            <section>
-                <p>для настоящих ценителей атмосферы</p>
-                <h2>Наши мастера</h2>
-                <ul>
-                    <li>
+            <section class="section section-team">
+                <p class="label">для настоящих ценителей атмосферы</p>
+                <h2 class="section-title">Наши мастера</h2>
+                <ul class="list">
+                    <li class="team-item">
                         <img src="./img/masters/img1.jpg" width="370" alt="Барбер John Smith">
-                        <h3>John Smith</h3>
+                        <h3 class="section-title">John Smith</h3>
                         <p>Extreme Barber</p>
                         <ul>
                             <li></li>
@@ -106,9 +112,9 @@
                             <li></li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="team-item">
                         <img src="./img/masters/img2.jpg" width="370" alt="Барбер Michele Doe">
-                        <h3>Michele Doe</h3>
+                        <h3 class="section-title">Michele Doe</h3>
                         <p>Extreme Barber</p>
                         <ul>
                             <li></li>
@@ -117,9 +123,9 @@
                             <li></li>
                         </ul>
                     </li>
-                    <li>
+                    <li class="team-item">
                         <img src="./img/masters/img3.jpg" width="370" alt="Барбер Alan Black">
-                        <h3>Alan Black</h3>
+                        <h3 class="section-title">Alan Black</h3>
                         <p>Extreme Barber</p>
                         <ul>
                             <li></li>
@@ -131,8 +137,8 @@
                 </ul>
             </section>
             <section>
-                <h2>Портфолио</h2>
-                <p>На латинском языке “барба” означает “борода”</p>
+                <h2 class="visually-hidden">Портфолио</h2>
+                <p class="label">На латинском языке “барба” означает “борода”</p>
                 <ul>
                     <li><img src="./img/portfolio/img-25.jpg" width="270" alt=""></li>
                     <li><img src="./img/portfolio/img-26.jpg" width="270" alt=""></li>
@@ -140,33 +146,33 @@
                     <li><img src="./img/portfolio/img-28.jpg" width="270" alt=""></li>
                 </ul>
             </section>
-            <div>
-                <section>
-                    <h2>Онлайн-запись</h2>
+            <div class="section-form">
+                <section class="section">
+                    <h2 class="title">Онлайн-запись</h2>
                 </section>
                 <section>
-                    <h2>Контакты</h2>
+                    <h2 class="title">Контакты</h2>
                     <address>
                         <ul>
-                            <li><a href="https://goo.gl/maps/jJzeuJFhVTPg2ui97" target="_blank" rel="noopener noreferer">ул.
+                            <li><a class="link" href="https://goo.gl/maps/jJzeuJFhVTPg2ui97" target="_blank" rel="noopener noreferer">ул.
                                             Васильковая, 7А
                                             Киев, 08132</a></li>
-                            <li><a href="tel:+380441111111">+38 044 111 11 11</a></li>
-                            <li><a href="mailto:barbershop@email.com">barbershop@email.com</a></li>
+                            <li><a class="link" href="tel:+380441111111">+38 044 111 11 11</a></li>
+                            <li><a class="link" href="mailto:barbershop@email.com">barbershop@email.com</a></li>
                         </ul>
                     </address>
                 </section>
                 <section>
-                    <h3>время работы</h3>
-                    <p>Ежедневно с 9:00 до 22:00</p>
+                    <h3 class="title">время работы</h3>
+                    <p class="timetable">Ежедневно с 9:00 до 22:00</p>
                 </section>
             </div>
         </main>
-        <footer>
-            <p>&copy; Copyright 2020</p>
+        <footer class="section section-footer">
+            <p class="copyrights">&copy; Copyright 2020</p>
             <ul>
-                <li><a href="" target="_blank" rel="noopener noreferer">Instagram</a></li>
-                <li><a href="" target="_blank" rel="noopener noreferer">Youtube</a></li>
+                <li><a class="link" href="" target="_blank" rel="noopener noreferer">Instagram</a></li>
+                <li><a class="link" href="" target="_blank" rel="noopener noreferer">Youtube</a></li>
             </ul>
         </footer>
     </body>
