--- a/index.html
+++ b/index.html
@@ -9,54 +9,54 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&family=Raleway:wght@700&display=swap"
             rel="stylesheet">
-            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
-        <link rel="stylesheet" href="./style/style.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css">
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-        <header class="section section-header">
-            <nav class="nav-site">
-                <a href="./"><img src="./img/logo.svg" width="69" height="56" alt="Логотип Барбершоп"></a>
+        <header class="header dark-bg">
+            <a href="./"><img src="./img/logo.svg" width="69" height="56" alt="Логотип Барбершоп"></a>
+            <nav class="">
                 <ul class="list">
-                    <li class="list-item"><a class="link" href="">О нас</a></li>
-                    <li class="list-item"><a class="link" href="">Услуги и цены</a></li>
-                    <li class="list-item"><a class="link" href="">Мастера</a></li>
-                    <li class="list-item"><a class="link" href="">Контакты</a></li>
+                    <li class=""><a class="link" href="">Услуги и цены</a></li>
+                    <li class=""><a class="link" href="">Мастера</a></li>
+                    <li class=""><a class="link" href="">О нас</a></li>
+                    <li class=""><a class="link" href="">Контакты</a></li>
                 </ul>
             </nav>
-            <a class="link" href="tel:+380441111111">+38 044 111 11 11</a>
-            <a class="link" href="">онлайн-запись</a>
+                    <a class="link" href="tel:+380441111111">+38 044 111 11 11</a>
+                    <a class="link button" href="">онлайн-запись</a>
         </header>
         <main>
-            <section class="hero">
-                <p class="hero-text">A hair salon for men in Kyiv</p>
-                <h1 class="hero-title">BarberShop</h1>
-                <p class="hero-item">Мы эксперты в модных мужских стрижках.
+            <section class="dark-bg">
+                <p class="title-label" lang="eng">A hair salon for men in Kyiv</p>
+                <h1 class="title page-title">BarberShop</h1>
+                <p class="">Мы эксперты в модных мужских стрижках.
                             Работаем быстро, осторожно и со вкусом.</p>
-                <ul class="aside">
-                    <li><a class="link aside-link" href="" target="_blank" rel="noopener noreferer">Instagram</a></li>
-                    <li><a class="link aside-link" href="" target="_blank" rel="noopener noreferer">Youtube</a></li>
+                <ul class="list social-list">
+                    <li><a class="link" href="" target="_blank" rel="noopener noreferer">Instagram</a></li>
+                    <li><a class="link" href="" target="_blank" rel="noopener noreferer">Youtube</a></li>
                 </ul>
             </section>
-            <section class="section section-about">
-                <ul>
+            <section class="">
+                <ul class="list">
                     <li><img src="./img/about/img-1.jpg" alt="Работа Барбера"></li>
                     <li><img src="./img/about/img-2.jpg" alt="Стильная стрижка 2022"></li>
                 </ul>
                 <div>
-                    <p class="label">О нас</p>
-                    <h2 class="section-title">Лучший Барбершоп твоего города</h2>
+                    <p class="title-label">О нас</p>
+                    <h2 class="title section-title">Лучший Барбершоп твоего города</h2>
                     <p>Если ты хочешь добавить в свой образ больше уверенности – тебе точно к нам.</p>
                     <p>Мы команда, которая никогда не останавливается на достигнутом
                                 и жаждет перемен. И когда ты попадешь в руки нашего мастера,
                                 то уже никогда не сможешь быть прежним. Мы команда, которая всегда с клиентами "на одной волне". Поэтому, мы
                                 всегда
                                 готовы усовершенствовать каждого, кто к нам приходит!</p>
-                    <button type="button">Онлайн-запись</button>
+                    <button class="button" type="button">Онлайн-запись</button>
                 </div>
             </section>
-            <section class="section section-price">
-                <p class="label">Проведи время в компаниилучших мастеров</p>
-                <h2 class="title">Услуги и цены</h2>
+            <section class="dark-bg">
+                <p class="title-label">Проведи время в компании лучших мастеров</p>
+                <h2 class="title section-title">Услуги и цены</h2>
                 <ul class="list">
                     <li><span>Мужская стрижка</span><span>от 300 грн.</span></li>
                     <li><span>Стрижка бороды</span><span>от 200 грн.</span></li>
@@ -69,43 +69,42 @@
                     <li><span>Детская стрижка (до 12 лет)</span><span>от 300 грн.</span></li>
                     <li><span>Камуфлирование седины</span><span>от 200 грн.</span></li>
                 </ul>
-                <a href="">Онлайн-Запись</a>
+                <a class="link button" href="">Онлайн-Запись</a>
             </section>
-            <section class="section section-features">
-                <ul class="features-counter">
-                    <li class="counter-item">
-                        <span class="counter">600<sup class="sup">+</sup></span>
+            <section class="benefits">
+                <ul class="list benefits-list">
+                    <li class="benefits-item">
+                        <span class="benefits-number">600<sup class="benefits-sup">+</sup></span>
                         <p>Довольных клиентов в день</p>
                     </li>
-                    <li class="counter-item">
-                        <span class="counter">50<sup class="sup">+</sup></span>
+                    <li class="benefits-item">
+                        <span class="benefits-number">50<sup class="benefits-sup">+</sup></span>
                         <p>Наград за отличный сервис</p>
                     </li>
-                    <li class="counter-item">
-                        <span class="counter">20<sup class="sup">+</sup></span>
+                    <li class="benefits-item">
+                        <span class="benefits-number">20<sup class="benefits-sup">+</sup></span>
                         <p>Лучших мастеров Киева</p>
                     </li>
-                    
-                    <li class="counter-item">
-                        <span class="counter">100<sup class="sup">+</sup></span>
+                    <li class="benefits-item">
+                        <span class="benefits-number">100<sup class="benefits-sup">+</sup></span>
                         <p>Подарков постоянным клиентам</p>
                     </li>
                 </ul>
                 <div>
-                    <p class="label">старая традиционная школа</p>
-                    <h2 class="section-title">Почему приходят именно к нам?</h2>
+                    <p class="title-label">старая традиционная школа</p>
+                    <h2 class="title section-title">Почему приходят именно к нам?</h2>
                     <p>О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.</p>
                 </div>
             </section>
-            <section class="section section-team">
-                <p class="label">для настоящих ценителей атмосферы</p>
-                <h2 class="section-title">Наши мастера</h2>
-                <ul class="list">
+            <section class="team">
+                <p class="title-label">для настоящих ценителей атмосферы</p>
+                <h2 class="title section-title">Наши мастера</h2>
+                <ul class="list team-list">
                     <li class="team-item">
                         <img src="./img/masters/img1.jpg" width="370" alt="Барбер John Smith">
-                        <h3 class="section-title">John Smith</h3>
-                        <p>Extreme Barber</p>
-                        <ul>
+                        <h3 class="team-member">John Smith</h3>
+                        <p class="team-member-position">Extreme Barber</p>
+                        <ul class="list">
                             <li></li>
                             <li></li>
                             <li></li>
@@ -114,9 +113,9 @@
                     </li>
                     <li class="team-item">
                         <img src="./img/masters/img2.jpg" width="370" alt="Барбер Michele Doe">
-                        <h3 class="section-title">Michele Doe</h3>
-                        <p>Extreme Barber</p>
-                        <ul>
+                        <h3 class="team-member">Michele Doe</h3>
+                        <p class="team-member-position">Extreme Barber</p>
+                        <ul class="list">
                             <li></li>
                             <li></li>
                             <li></li>
@@ -125,9 +124,9 @@
                     </li>
                     <li class="team-item">
                         <img src="./img/masters/img3.jpg" width="370" alt="Барбер Alan Black">
-                        <h3 class="section-title">Alan Black</h3>
-                        <p>Extreme Barber</p>
-                        <ul>
+                        <h3 class="team-member">Alan Black</h3>
+                        <p class="team-member-position">Extreme Barber</p>
+                        <ul class="list">
                             <li></li>
                             <li></li>
                             <li></li>
@@ -138,22 +137,22 @@
             </section>
             <section>
                 <h2 class="visually-hidden">Портфолио</h2>
-                <p class="label">На латинском языке “барба” означает “борода”</p>
-                <ul>
+                <p class="title-label">На латинском языке “барба” означает “борода”</p>
+                <ul class="list">
                     <li><img src="./img/portfolio/img-25.jpg" width="270" alt=""></li>
                     <li><img src="./img/portfolio/img-26.jpg" width="270" alt=""></li>
                     <li><img src="./img/portfolio/img-27.jpg" width="270" alt=""></li>
                     <li><img src="./img/portfolio/img-28.jpg" width="270" alt=""></li>
                 </ul>
             </section>
-            <div class="section-form">
-                <section class="section">
-                    <h2 class="title">Онлайн-запись</h2>
+            <div class="dark-bg">
+                <section class="">
+                    <h2 class="title section-title">Онлайн-запись</h2>
                 </section>
                 <section>
-                    <h2 class="title">Контакты</h2>
+                    <h2 class="title section-title">Контакты</h2>
                     <address>
-                        <ul>
+                        <ul class="list">
                             <li><a class="link" href="https://goo.gl/maps/jJzeuJFhVTPg2ui97" target="_blank" rel="noopener noreferer">ул.
                                             Васильковая, 7А
                                             Киев, 08132</a></li>
@@ -163,14 +162,14 @@
                     </address>
                 </section>
                 <section>
-                    <h3 class="title">время работы</h3>
-                    <p class="timetable">Ежедневно с 9:00 до 22:00</p>
+                    <h3 class="title-label">время работы</h3>
+                    <p class="">Ежедневно с 9:00 до 22:00</p>
                 </section>
             </div>
         </main>
-        <footer class="section section-footer">
-            <p class="copyrights">&copy; Copyright 2020</p>
-            <ul>
+        <footer class="">
+            <p class="copyright">&copy; Copyright 2020</p>
+            <ul class="list social-list">
                 <li><a class="link" href="" target="_blank" rel="noopener noreferer">Instagram</a></li>
                 <li><a class="link" href="" target="_blank" rel="noopener noreferer">Youtube</a></li>
             </ul>
